@@ -1,4 +1,10 @@
 Sat Dec 01 2001  Vitezslav Samel <samel@mail.cz>
+	* b.c, configure.ac, tty.c, tty.h, tw.c, uedit.c, utils.c, utils.h,
+	vfile.c:
+	move jread() / jwrite() into utils.c and rename them to joe_read() /
+	joe_write(); add checking of size_t and ssize_t into configure scripts
+
+Sat Dec 01 2001  Vitezslav Samel <samel@mail.cz>
 	* joerc.in:
 	use .@7 terminfo entry for "End" key
 
